[package]
name = "shinsu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atlier =  { git = "https://github.com/juliusl/atlier.git", branch = "pr/v1" }
lifec  =  { git = "https://github.com/juliusl/lifec.git", branch = "pr/v2_api" }
imnodes = { git = "https://github.com/benmkw/imnodes-rs.git" }
tokio = { version = "1.19.2", features = ["default", "rt-multi-thread", "sync", "fs", "process", "io-util", "io-std", "macros"] }
specs = { version = "0.18.0", features = ["default", "derive"] }
imgui = "0.8.2" 